@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- Added OS X cursor control to Fl_Input (STR #2169)
+	- Fixed control key keycodes with modifiers on OS X
 	- Avoiding crashes for recursive common dialogs (this does not 
 	  fix the issue at hand yet) (STR #1986, 2150)
 	- Added menu shortcut alignment for OS X
